--- a/css/main.css
+++ b/css/main.css
@@ -1699,11 +1699,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-<<<<<<< HEAD
-  background: #7f8ed6;
-=======
-  background: #ffff9c;
->>>>>>> 256cc9141f066e095e414d69d8c0cd8d4dd321a1
+  background: #8685ff;
 }
 .links-of-blogroll {
   font-size: 13px;
